<resources>
    <string name="app_name">Do.it</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item…</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="task_label">Task</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="due_date_label">Due date</string>
    <string name="priority_label">Priority</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="status_label">Status</string>
    <string-array name="completed_array">
        <item>Completed</item>
        <item>Uncompleted</item>
    </string-array>
</resources>
